version/0.2/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.2.0 <https://github.com/ansys/pylumerical/releases/tag/v0.2.0>`_ - December 22, 2025
=======================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump the pip-deps group across 1 directory with 4 updates
          - `#34 <https://github.com/ansys/pylumerical/pull/34>`_

        * - Bump pytest from 9.0.0 to 9.0.2 in the pip-deps group
          - `#37 <https://github.com/ansys/pylumerical/pull/37>`_

        * - Bump the pip-deps group with 2 updates
          - `#41 <https://github.com/ansys/pylumerical/pull/41>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add \`\`html context\`\`
          - `#26 <https://github.com/ansys/pylumerical/pull/26>`_

        * - PyLumerical Quarto Cheatsheet
          - `#28 <https://github.com/ansys/pylumerical/pull/28>`_

        * - Update \`\`CONTRIBUTORS.md\`\` with the latest contributors
          - `#31 <https://github.com/ansys/pylumerical/pull/31>`_

        * - Jupytext example pages
          - `#33 <https://github.com/ansys/pylumerical/pull/33>`_

        * - Post release wording fix
          - `#42 <https://github.com/ansys/pylumerical/pull/42>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update CHANGELOG for v0.1.0
          - `#23 <https://github.com/ansys/pylumerical/pull/23>`_

        * - Update CODEOWNERS to include additional directories and owners
          - `#29 <https://github.com/ansys/pylumerical/pull/29>`_

        * - Post release cleanup of CI
          - `#32 <https://github.com/ansys/pylumerical/pull/32>`_

        * - Bump the actions group across 1 directory with 4 updates
          - `#36 <https://github.com/ansys/pylumerical/pull/36>`_

        * - Reorganize CODEOWNERS
          - `#39 <https://github.com/ansys/pylumerical/pull/39>`_

        * - Bump codecov/codecov-action from 5.5.1 to 5.5.2 in the actions group
          - `#40 <https://github.com/ansys/pylumerical/pull/40>`_


`0.1.0 <https://github.com/ansys/pylumerical/releases/tag/v0.1.0>`_ - November 14, 2025
=======================================================================================

.. tab-set::


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add deploy PR documentation label and workflow
          - `#16 <https://github.com/ansys/pylumerical/pull/16>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add workflows
          - `#5 <https://github.com/ansys/pylumerical/pull/5>`_

        * - Updating numerous files and pipeline for initial release
          - `#17 <https://github.com/ansys/pylumerical/pull/17>`_

        * - Release prep
          - `#20 <https://github.com/ansys/pylumerical/pull/20>`_


.. vale on
